fix layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,7 @@
-html {
-    height: 100%;
-}
-
 body { 
     margin:0;
     padding:0;
     overflow: hidden;
-    height: 100%;
 }
 
 a {
@@ -32,8 +27,8 @@ a {
     position: absolute;
     top: 0;
     left: 0;
+    bottom: 0;
     width: 100%;
-    height: 100%;
 }
 
 .topbar {
